[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta:__legacy__"

[project]
name = "Patchview"
version = "0.3.0"
authors = [
  {email = "hi@gmail.com"},
  {name = "Ming Hu"}
]
description = "data analysis and visualization on whole-cell data"
requires-python = ">=3.10"
keywords = ["patch-clamp", "data analysis"]
classifiers = [
    "Programming Language :: Python :: 3"
]

[project.gui-scripts]
patchview = "patchview:pvGUI"